@@ -1,12 +1,14 @@
 HelpMePlay | 1.0.10
 	New Features:
 		- Added a feature that quickly exits specified vehicles.
-		- Added support for suggesting talents on the Titan Research Archive (Horrific Visions).
+		- Added support for skipping cinematics.
 	General:
 		- TOC bump for Patch 9.2.
 		- All locales are now supported. (The addon itself still needs to be localized to other languages.)
 	UI:
 		- Added a 'Disable All' fontstring for its check button.
+	Talent NPCs:
+		- Added support for suggesting talents on the Titan Research Archive (Horrific Visions).
 	Dialog:
 		- Dialog is now processed when Quests automation is disabled.
 		- Added more dialogs from Zereth Mortis.
